src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Question1__c</fullName>
        <description>Survey response questions1</description>
        <label>Question1</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <description>Survey response question2</description>
        <label>Question2</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question3__c</fullName>
        <label>Question3</label>
        <length>600</length>
        <type>Html</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>